--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import 'variables/breakpoints';
 @import 'variables/variables';
 
+@import 'components/c-container';
 @import 'components/c-header';
 @import 'components/c-ads';
 @import 'components/c-inset';
