--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,6 +5,6 @@
 
 @import 'components/c-container';
 @import 'components/c-header';
-@import 'components/c-ads';
+@import 'components/c-advert';
 @import 'components/c-inset';
 @import 'components/c-footer';
