--- a/src/style/components/c-advert.scss
+++ b/src/style/components/c-advert.scss
@@ -10,7 +10,7 @@
       text-align: center;
       margin: 0;
       padding: .5em 2.4em;
-      font-size: 20px;
+      font-size: 18px;
       color: gray;
       a {
         padding: 0 .5em;
@@ -23,20 +23,20 @@
     &--title {
       margin: 0;
       color: purple;
-      font-size: 24px;
-      padding: 0 .5em;
+      font-size: 22px;
+      padding: 0 0 .1em .5em;
     }
     &--header {
       margin: 0;
-      font-size: 20px;
-      padding: .2em .5em;
+      font-size: 18px;
+      padding: .1em .5em;
     }
     &--nav {
       display: flex;
       &-list {
         list-style: none;
-        font-size: 20px;
-        padding: .2em .5em;
+        font-size: 18px;
+        padding: .1em .5em;
       }
       &-span {
         font-size: 24px;
@@ -44,8 +44,8 @@
       }
     }
     &--text {
-      font-size: 20px;
-      padding: .2em .5em;
+      font-size: 18px;
+      padding: .1em .5em;
       margin: 0;
       text-align: justify;
     }
